@@ -6,6 +6,8 @@ vivi.core changes
 
 - BUG-1415: Be more defensive during BC video import
 
+- TOPIC-9: Store topicpage_order abstracted from the concrete TMS fieldnames
+
 
 4.57.2 (2021-06-30)
 -------------------
